# Bevy_tnua_avian2d_platformer

./: .gitignore  Cargo.toml
assets/weapons/Swords/: Thank you!.txt
assets/weapons/arijkx_freepixelart_swordseries_01/: license.txt.txt  readme.txt.txt
src/: app_setup_options.rs  lib.rs  main.rs
src/character_animating_systems/: platformer_animating_systems.rs
src/character_control_systems/: info_dumping_systems.rs  mod.rs  platformer_control_scheme.rs  platformer_control_systems.rs  player_input.rs  spatial_ext_facade.rs
src/level_mechanics/: cannon.rs  center_of_gravity.rs  mod.rs  moving_platform.rs
src/levels_setup/: close_platforms_2d.rs  dynamic_bodies_2d.rs  for_2d_platformer.rs  level_switching.rs  mod.rs  planet_2d.rs
src/levels_setup/helper/: helper2d.rs  mod.rs
src/living/: components.rs  config.rs  enemy.rs  mod.rs  player.rs  spawner.rs  weapon_shooting.rs
src/living/weapon_shooting/: beam.rs  components.rs  equip.rs  events.rs  melee.rs  mod.rs  projectiles.rs
src/ui/: component_alteration.rs  components.rs  framerate.rs  info.rs  level_selection.rs  mod.rs  plotting.rs  plugin.rs  systems.rs  tuning.rs
src/util/: controls_other.rs  game_states.rs  mod.rs  particles.rs  units.rs
tnua_demos_crate/: Cargo.toml
