[package]
name = "platformer"
version = "0.1.0"
edition = "2024"

[features]
#default = ["avian2d"]
default = ["avian2d", "egui"]

#egui = ["dep:bevy_egui", "dep:egui_plot", "dep:egui_extras", "dep:bevy-inspector-egui"]
egui = ["bevy_egui", "dep:egui_plot", "dep:egui_extras", "dep:bevy-inspector-egui"]

framepace = ["dep:bevy_framepace"] # Not a default feature

f64 = [
    "avian2d?/f64",
    "avian2d?/parry-f64",
    "bevy-tnua-physics-integration-layer/f64",
    "bevy-tnua/f64",
]

avian = []
avian2d = ["avian", "dep:avian2d", "dep:bevy-tnua-avian2d", "avian2d/f32", "avian2d/parry-f32"]

[dependencies]
bevy = { version = "0.19", features = [
    "gltf_animation",
    "reflect_auto_register",
] }


bevy_hanabi = { version = "0.19", default-features = false, features = ["2d"] }

bevy-tnua = "0.32"
bevy-tnua-physics-integration-layer = "0.13"

avian2d = { version = "0.7", default-features = false, features = ["2d", "debug-plugin", "parallel"], optional = true }
bevy-tnua-avian2d = { version = "0.12", default-features = false, optional = true }

#bevy_egui = { version = "0.40.1", optional = true, default-features = false, features = ["default_fonts", "render"] }
bevy_egui = { version = "0.41.0", optional = true, default-features = false, features = ["default_fonts", "render"] }
egui_plot = { version = "0.36", optional = true }
egui_extras = { version = "0.35.0", optional = true }

# Re-exports the same bevy_egui/egui versions used above, so the egui contexts unify.
#bevy-inspector-egui = { version = "0.37", optional = true, default-features = false, features = ["bevy", "highlight_changes"] }
bevy-inspector-egui = { git = "https://github.com/taboky-dev/bevy-inspector-egui.git", rev = "6d58074", optional = true, default-features = false, features = ["bevy", "highlight_changes"] }

bevy_framepace = { version = "0.22.0", optional = true }

clap = { version = "4", features = ["derive"] }
ordered-float = "5.0.0"
serde = { version = "1.0.228", features = ["derive"] }
glamour = "0.18.0"
jackdaw_runtime = "0.4.1"
egui = "0.35.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Location", "Url", "UrlSearchParams"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(feature, values("pie", "editor"))'] }
